fix: set guestbook message bg-color for dark mode

--- a/app/bride/main.css
+++ b/app/bride/main.css
@@ -1,3 +1,16 @@
+/* 기본 라이트모드 스타일 */
 body {
   background-color: white !important;
+}
+
+/* 다크모드 스타일 */
+@media (prefers-color-scheme: dark) {
+  body {
+    background-color: #000;
+    color: #fff;
+  }
+
+  .guestbook-message-list li {
+    background-color: rgb(51 65 85);
+  }
 }
